Initial Map Creation

--- a/BattleTankUE/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTankUE/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,6 +27,9 @@ MultipleInstanceLastWidth=0
 LastExecutedLaunchDevice=WindowsNoEditor@PREDATOR001
 LastExecutedLaunchName=PREDATOR001
 
+[MRU]
+MRUItem0=/Game/BattleTank
+
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/Template_Default
 
@@ -53,5 +56,15 @@ LandscapeEditorObject.LandscapeEditor=True
 LandscapeEditorObject.Brush Settings=True
 LandscapeEditorObject.Tool Settings=True
 LandscapeEditorObject.Target Layers=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+
+[ContentBrowser]
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 
